Add a post request for archiving multiple events
